 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

trunk (current development)

* GORA-193 Make sure gora-core test dependency is always generated when packaging (lewismc)

* GORA-186 Show better errors when a field is missing in HBase mapping (Alfonso Nishikawa via hsaputra)

* GORA-179 Modify the Query interface to be Query<K, T extends Persistent> to be more precise

* GORA-178 HBase fix ivy.xml to use the correct antconfig mapping (ferdy) 

* GORA-172 java.lang.ClassNotFoundException: org.apache.gora.memory.store.MemStore.MemQuery (yumeng via lewismc)

* GORA-103 Datastore for gora-dynamodb (rmarroquin via lewismc)

* GORA-160 Gora Fails to Import Into Recent Versions of Eclipse (Ed Kohlwey via lewismc)

* GORA-85 Implement "Usage" messages for SpecificCompiler and LogAnalytics (lewismc)

* GORA-164 Use <type> instead of <classifier> configuration for test dependencies (lewismc)

* GORA-XX ensure directory cleanup succeeds in gora-* (Simone Tripodi via lewismc)

0.2.1 release: 26/07/2012
Release Report: https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311172&version=12322496

* GORA-157 gora-cassandra test failure - proposal to skip 10 test cases for a while (kazk)

* GORA-156 Properly implement getSchemaName in CassandraStore (lewismc)

* GORA-153 gora-cassandra does not correctly handle DELETED State for MAP (kazk)

* GORA-152 gora-core test incorrectly uses ByteBuffer's array() method to get its byte array (kazk)

* GORA-151 CassandraStore's schemaExists() method always returns false (kazk)

* GORA-150 Introduce Configuration property preferred.schema.name (ferdy)

* GORA-142 Creates org.apache.gora.cassandra.serializers package in order to clean the code of store and query packages and to support additional types in future. (kazk)
